examples/jpbasic_chkt_03.asl
func f3()
    var x3 : int
    x3 = f3 == f3; 
endfunc

func g3()
    var f3 : int
    f3();
    if 33 then
        write g3;
        h3();
    endif
endfunc
